fix styling and extra padding, positioning of warning. * make the copy phrase instructions clear and accurate. * rearrange the menu item ordering * use a span instead of <a> to avoid two clickables * make the flagged phrase rewrite screen conform to account create ui.

--- a/packages/fether-react/src/assets/sass/components/_header-nav.scss
+++ b/packages/fether-react/src/assets/sass/components/_header-nav.scss
@@ -45,7 +45,8 @@
 
   a,
   a:link,
-  a:visited {
+  a:visited,
+  span {
     z-index: 9;
     color: rgba($black, 0.675);
     font-weight: 500;
